# devmind-CLI

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  project description.txt  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
devmind/: __init__.py  cli.py  memory.py
devmind/ingestion/: comment_extractor.py  file_reader.py  git_parser.py
devmind/integrations/: claude_code.py
devmind/web/: app.py
devmind/web/templates/: index.html
examples/demo_project/: README.md  main.py  utils.py
